# unicodelib

./: .gitignore  .travis.yml  dune-project  unicodelib.opam
convert_parser/: dune  pa_convert.ml
data/: fetch_data.sh
lib/: CharInfo.ml  CharInfo.mli  Convert.ml  Convert.mli  GenConvert.ml  Latin1.mli  Normalization.ml  Roman.mli  Types.ml  UCharInfo.ml  UTF.ml  UTF16.ml  UTF16.mli  UTF32.ml  UTF32.mli  UTF8.ml  UTF8.mli  UTFNormalisation.ml  UTFNormalization.ml  UTFTypes.ml  dune
tests/: Break.ml  Normalization.ml  dune  generate.ml  width.ml
unicode_parser/: PermanentMap.ml  UTFTypes.ml  dune  pa_Blocks.ml  pa_UnicodeData.ml
