synopsis: "light and reliable unicode library"

opam-version: "2.0"
maintainer: "Christophe Raffalli <christophe@raffalli.eu>"
authors: [
  "Christophe Raffalli <christophe@raffalli.eu>"
  "Pierre-Étienne Meunier"
  "Rodolphe Lepigre"]
license: "MIT"

depends: [
  "ocaml" { >= "4.04.0" }
  "dune"  { build & >= "1.2.0" }
  "pacomb" { build }
  "bz2" { }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
run-test: [ [ "dune" "runtest" "-p" name "-j" jobs ] ]
