(library
  (name unicodelib)
  (public_name unicodelib)
  (modules :standard)
  (libraries sqlite3))

(install
  (section share)
  (files ./unicodelib.db))

(rule
  (targets ./UnicodeConfig.ml)
  (deps ./unicodelib.db)
  (action
	(bash "echo \"let unicodelib_db = \\\"`opam config var share`/unicodelib/UnicodeData.db\\\"\" > ./UnicodeConfig.ml")))

(rule
  (targets ./unicodelib.db)
  (deps ../unicode_parser/pa_UnicodeData.exe ../data/UnicodeData.txt)
  (action
	(run ../unicode_parser/pa_UnicodeData.exe ../data/UnicodeData.txt unicodelib.db)))

(rule
  (targets ./Latin1.ml)
  (deps ../convert_parser/pa_convert.exe ../encoding_data/LATIN1.TXT)
  (action
	(run ../convert_parser/pa_convert.exe ../encoding_data/LATIN1.TXT Latin1.ml)))

(rule
  (targets ./Roman.ml)
  (deps ../convert_parser/pa_convert.exe ../encoding_data/ROMAN.TXT)
  (action
	(run ../convert_parser/pa_convert.exe ../encoding_data/ROMAN.TXT Roman.ml)))
