(executable
  (name pa_UnicodeData)
  (public_name pa_UnicodeData)
  (modules UTFTypes PermanentMap Pa_UnicodeData)
  (preprocess (pps ppxlib.metaquot pacomb.ppx))
  (libraries unix sqlite3 ppxlib pacomb))

(executable
  (name pa_Blocks)
  (public_name pa_Blocks)
  (modules Pa_Blocks)
  (preprocess (pps ppxlib.metaquot pacomb.ppx))
  (libraries unix sqlite3 ppxlib pacomb))
